# anime-tui

./: Cargo.toml  README.md  info.md
src/: app.rs  download.rs  main.rs  ui.rs
src/sources/: mod.rs  nyaa.rs  subsplease.rs
